shared/src/test/data/yeast/invalid-json/map-wihtout-comma.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'aa'
Indicator           7,  2,  5 '\"'
EndScalar           8,  2,  6 ''
Indicator           8,  2,  6 ':'
WhiteSpace          9,  2,  7 ' '
BeginScalar        10,  2,  8 ''
Indicator          10,  2,  8 '\"'
Text               11,  2,  9 'bb'
Indicator          13,  2, 11 '\"'
EndScalar          14,  2, 12 ''
LineBreak          14,  2, 12 '\n'
WhiteSpace         15,  3,  0 '  '
BeginScalar        17,  3,  2 ''
Indicator          17,  3,  2 '\"'
Text               18,  3,  3 'cc'
Indicator          20,  3,  5 '\"'
EndScalar          21,  3,  6 ''
Indicator          21,  3,  6 ':'
WhiteSpace         22,  3,  7 ' '
BeginScalar        23,  3,  8 ''
Indicator          23,  3,  8 '\"'
Text               24,  3,  9 'dd'
Indicator          26,  3, 11 '\"'
EndScalar          27,  3, 12 ''
LineBreak          27,  3, 12 '\n'
EndMapping         28,  4,  0 '}'
